# Social-Media-Impact-on-Teen-Mental-Health

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: cleaned_data.csv  cleaned_data.parquet
data/raw/: unprocessed_data.parquet
notebooks/: data_cleaning.ipynb  data_profiling.ipynb  load_cleaned_data.py  load_data.py  predictive_models.ipynb  save_cleaned_data.py  statistical_analysis.ipynb
reports/: Clean-EDA-Report.html  EDAReport.html  statistical_analysis.md
scripts/: csv_to_parquet.py  parquet_to_csv.py
