[project]
name = "social-media-impact-on-teen-mental-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "ipywidgets>=8.1.8",
    "mime>=0.1.0",
    "nbformat>=4.2",
    "plotly>=6.7.0",
    "polars-lts-cpu>=1.33.1",
    "py-stats>=0.2",
    "pyarrow>=23.0.1",
    "python-stats>=1.0.1",
    "setuptools<82",
    "sweetviz>=2.3.3",
    "ydata-profiling==4.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
